force-app/main/default/objects/DemandMatrixLine__c/DemandMatrixLine__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to capture preferred CM per quater per product. Deal Allocation % per CM.</description>
    <label>Demand Matrix Line</label>
    <nameField>
        <displayFormat>DM Line-{00000}</displayFormat>
        <label>DMA Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Matrix Lines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>