force-app/main/default/objects/DemandMatrixLine__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demand Matrix Lines</relationshipLabel>
    <relationshipName>DemandMatrixLines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>