force-app/main/default/objects/DemandMatrixLine__c/fields/FinalCM_PerQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>FinalCM_PerQuoteLine__c</fullName>
    <label>Final CM(Per Quote Line)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContractManufacturer</valueSetName>
    </valueSet>
</CustomField>