force-app/main/default/objects/DemandMatrixLine__c/fields/ManufacturerByCM_PerItem__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerByCM_PerItem__c</fullName>
    <description>CM Preference based on past CM deals per quarter</description>
    <label>Manufacturer (By CM per Item)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContractManufacturer</valueSetName>
    </valueSet>
</CustomField>