force-app/main/default/objects/DemandMatrixLine__c/fields/ManufacturerByDISTI_PerItem__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerByDISTI_PerItem__c</fullName>
    <label>Manufacturer (By DISTI per Item)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContractManufacturer</valueSetName>
    </valueSet>
</CustomField>