force-app/main/default/objects/DemandMatrixLine__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Demand Matrix Lines</relationshipLabel>
    <relationshipName>DemandMatrixLines</relationshipName>
    <type>Lookup</type>
</CustomField>