force-app/main/default/objects/DemandMatrixLine__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY22Q1</fullName>
            </value>
            <value>
                <fullName>FY22Q2</fullName>
            </value>
            <value>
                <fullName>FY22Q3</fullName>
            </value>
            <value>
                <fullName>FY22Q4</fullName>
            </value>
            <value>
                <fullName>FY23Q1</fullName>
            </value>
            <value>
                <fullName>FY23Q2</fullName>
            </value>
            <value>
                <fullName>FY23Q3</fullName>
            </value>
            <value>
                <fullName>FY23Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>