force-app/main/default/objects/DemandMatrixLine__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Demand Matrix Lines</relationshipLabel>
    <relationshipName>DemandMatrixLines</relationshipName>
    <type>Lookup</type>
</CustomField>