force-app/main/default/objects/DemandMatrixLine__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Demand Matrix Lines</relationshipLabel>
    <relationshipName>DemandMatrixLines</relationshipName>
    <type>Lookup</type>
</CustomField>