force-app/main/default/objects/DemandMatrixLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>FinalCM_PerQuote__c</columns>
    <columns>Distributor__c</columns>
    <columns>ManufacturerByCM_PerItem__c</columns>
    <columns>ManufacturerByDISTI_PerItem__c</columns>
    <columns>Quote__c</columns>
    <columns>Status__c</columns>
    <columns>Quarter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>